--- a/docker/logstash.cfg
+++ b/docker/logstash.cfg
@@ -4,7 +4,9 @@ input {
 
 output {
   etcd{
-  	etcd_ip => "127.0.0.1"
+  	etcd_ip => "10.1.42.1"
 	etcd_port => 4001
+	path => "/test/[host]/[sequence]"
+	# value_field => "message"
   }
 }
