+ date handling with iso8601 format and add ttl option

--- a/docker/logstash.cfg
+++ b/docker/logstash.cfg
@@ -6,7 +6,8 @@ output {
   etcd{
   	etcd_ip => "10.1.42.1"
 	etcd_port => 4001
-	path => "/test/[host]/[sequence]"
-	# value_field => "message"
+	path => "/test/[host]/[sequence]/[@timestamp]"
+	value_field => "message"
+	ttl => 5
   }
 }
